--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "iview": "^2.14.0-rc.1",
     "iview-area": "^1.5.17",
     "js-cookie": "^2.2.0",
+    "simplemde": "^1.11.2",
     "sortablejs": "^1.7.0",
     "tinymce": "^4.7.11",
     "vue": "^2.5.10",
